media query changed

--- a/index.html
+++ b/index.html
@@ -410,11 +410,11 @@
         </div>
         <div class="navbar-links">
             <ul class="footer-navlinks text-center">
-                <li>गृहपाना</li>
-                <li>सेवाहरु</li>
-                <li>सेवा प्रकिया/सम्पर्क</li>
-                <li>सेवा शुल्क</li>
-                <li>सम्पर्क</li>
+                <li><a href="#about-section " class="f-link">गृहपाना</a></li>
+                <li><a href="#services-section" class="f-link">सेवाहरु</a> </li>
+                <li><a href="#price-section" class="f-link">सेवा प्रकिया/सम्पर्क</a></li>
+                <li><a href="#payment-section" class="f-link">सेवा शुल्क</a></li>
+                <li><a href="#contact-section" class="f-link">सम्पर्क</a></li>
             </ul>
         </div>
         <div class="f-text text-center">All rights Reserved @ChamlingTech 2024</div>
