--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="HTML, CSS, Javascript, jyotish, dambar rai">
     <meta name="author" name="chamlingTech, dambar rai">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Online Jyotish</title>
+    <title>jyotishguru.tech</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
